@@ -19,6 +19,7 @@ package org.apache.cassandra.tracing;
 
 import java.net.InetAddress;
 import java.nio.ByteBuffer;
+import java.util.Collections;
 import java.util.List;
 import java.util.UUID;
 import java.util.concurrent.CopyOnWriteArrayList;
@@ -30,6 +31,11 @@ import org.slf4j.helpers.MessageFormatter;
 
 import org.apache.cassandra.concurrent.Stage;
 import org.apache.cassandra.concurrent.StageManager;
+import org.apache.cassandra.db.ConsistencyLevel;
+import org.apache.cassandra.db.Mutation;
+import org.apache.cassandra.exceptions.OverloadedException;
+import org.apache.cassandra.service.MigrationManager;
+import org.apache.cassandra.service.StorageProxy;
 import org.apache.cassandra.utils.ByteBufferUtil;
 import org.apache.cassandra.utils.WrappedRunnable;
 import org.apache.cassandra.utils.progress.ProgressEvent;
@@ -53,6 +59,9 @@ public class TraceState implements ProgressEventNotifier
     private final List<ProgressListener> listeners = new CopyOnWriteArrayList<>();
     private String tag;
 
+    private final AtomicInteger pendingMutations = new AtomicInteger();
+    private final InetAddress clientAddress;
+
     public enum Status
     {
         IDLE,
@@ -60,7 +69,7 @@ public class TraceState implements ProgressEventNotifier
         STOPPED
     }
 
-    private Status status;
+    private volatile Status status;
 
     // Multiple requests can use the same TraceState at a time, so we need to reference count.
     // See CASSANDRA-7626 for more details.
@@ -68,15 +77,16 @@ public class TraceState implements ProgressEventNotifier
 
     public TraceState(InetAddress coordinator, UUID sessionId)
     {
-        this(coordinator, sessionId, Tracing.TraceType.QUERY);
+        this(coordinator, null, sessionId, Tracing.TraceType.QUERY);
     }
 
-    public TraceState(InetAddress coordinator, UUID sessionId, Tracing.TraceType traceType)
+    public TraceState(InetAddress coordinator, InetAddress clientAddress, UUID sessionId, Tracing.TraceType traceType)
     {
         assert coordinator != null;
         assert sessionId != null;
 
         this.coordinator = coordinator;
+        this.clientAddress = clientAddress;
         this.sessionId = sessionId;
         sessionIdBytes = ByteBufferUtil.bytes(sessionId);
         this.traceType = traceType;
@@ -121,6 +131,19 @@ public class TraceState implements ProgressEventNotifier
     {
         status = Status.STOPPED;
         notifyAll();
+        pushEventIfStopped();
+    }
+
+    void pushEventIfStopped()
+    {
+        if (status == Status.STOPPED && pendingMutations.get() == 0)
+        {
+            // poor-man's prevention of duplicate tracing-finished events
+            pendingMutations.set(Integer.MIN_VALUE);
+
+            if (clientAddress != null)
+                MigrationManager.instance.notifyTraceFinished(clientAddress, this.sessionId);
+        }
     }
 
     /*
@@ -172,12 +195,15 @@ public class TraceState implements ProgressEventNotifier
         trace(MessageFormatter.arrayFormat(format, args).getMessage());
     }
 
-    public void trace(String message)
+    public void trace(final String message)
     {
         if (notify)
             notifyActivity();
 
-        TraceState.mutateWithTracing(sessionIdBytes, message, elapsed(), ttl);
+        final String threadName = Thread.currentThread().getName();
+        final int elapsed = elapsed();
+
+        executeMutation(TraceKeyspace.makeEventMutation(sessionIdBytes, message, elapsed, threadName, ttl));
 
         for (ProgressListener listener : listeners)
         {
@@ -185,6 +211,31 @@ public class TraceState implements ProgressEventNotifier
         }
     }
 
+    void executeMutation(final Mutation mutation)
+    {
+        pendingMutations.incrementAndGet();
+
+        StageManager.getStage(Stage.TRACING).execute(new WrappedRunnable()
+        {
+            protected void runMayThrow() throws Exception
+            {
+                try
+                {
+                    mutateWithCatch(mutation);
+                }
+                finally
+                {
+                    if (pendingMutations.decrementAndGet() == 0)
+                        pushEventIfStopped();
+                }
+            }
+        });
+    }
+
+    /**
+     * Called from {@link org.apache.cassandra.net.OutboundTcpConnection} for non-local traces (traces
+     * that are not initiated by local node == coordinator).
+     */
     public static void mutateWithTracing(final ByteBuffer sessionId, final String message, final int elapsed, final int ttl)
     {
         final String threadName = Thread.currentThread().getName();
@@ -193,9 +244,21 @@ public class TraceState implements ProgressEventNotifier
         {
             public void runMayThrow()
             {
-                Tracing.mutateWithCatch(TraceKeyspace.makeEventMutation(sessionId, message, elapsed, threadName, ttl));
+                mutateWithCatch(TraceKeyspace.makeEventMutation(sessionId, message, elapsed, threadName, ttl));
             }
         });
+    }
+
+    static void mutateWithCatch(Mutation mutation)
+    {
+        try
+        {
+            StorageProxy.mutate(Collections.singletonList(mutation), ConsistencyLevel.ANY);
+        }
+        catch (OverloadedException e)
+        {
+            Tracing.logger.warn("Too many nodes are overloaded to save trace events");
+        }
     }
 
     public boolean acquireReference()
